--- a/initial_workbook.ipynb
+++ b/initial_workbook.ipynb
@@ -337,12 +337,384 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a00343b2-78bc-43b8-8e70-92c0c6bdd209",
-   "metadata": {},
+   "execution_count": 122,
+   "id": "b8f2b4e0-7e25-4fdc-b386-c116d7354a43",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "family_count['fem_no_kid(count)'] = "
+    "family_count['fem_total(count)'] = family_count['fem_total(count)'].str.replace(',', '').astype(int)\n",
+    "family_count['fem_with_kid(count)'] = family_count['fem_with_kid(count)'].str.replace(',', '').astype(int)\n",
+    "family_count['male_total(count)'] = family_count['male_total(count)'].str.replace(',', '').astype(int)\n",
+    "family_count['male_with_kid(count)'] = family_count['male_with_kid(count)'].str.replace(',', '').astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "609d1ff1-8d6d-4b53-80b9-943cfc5e4573",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fem_total(count)</th>\n",
+       "      <th>fem_with_kid(count)</th>\n",
+       "      <th>male_total(count)</th>\n",
+       "      <th>male_with_kid(count)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Baldwin County, Alabama!!Estimate</th>\n",
+       "      <td>22981</td>\n",
+       "      <td>4249</td>\n",
+       "      <td>13426</td>\n",
+       "      <td>950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Calhoun County, Alabama!!Estimate</th>\n",
+       "      <td>15956</td>\n",
+       "      <td>3779</td>\n",
+       "      <td>9599</td>\n",
+       "      <td>318</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cullman County, Alabama!!Estimate</th>\n",
+       "      <td>8584</td>\n",
+       "      <td>1402</td>\n",
+       "      <td>5554</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DeKalb County, Alabama!!Estimate</th>\n",
+       "      <td>8026</td>\n",
+       "      <td>1343</td>\n",
+       "      <td>4541</td>\n",
+       "      <td>362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Elmore County, Alabama!!Estimate</th>\n",
+       "      <td>9466</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>4373</td>\n",
+       "      <td>727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Waukesha County, Wisconsin!!Estimate</th>\n",
+       "      <td>36238</td>\n",
+       "      <td>4193</td>\n",
+       "      <td>25949</td>\n",
+       "      <td>1716</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Winnebago County, Wisconsin!!Estimate</th>\n",
+       "      <td>19948</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>13825</td>\n",
+       "      <td>586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wood County, Wisconsin!!Estimate</th>\n",
+       "      <td>7968</td>\n",
+       "      <td>1292</td>\n",
+       "      <td>5163</td>\n",
+       "      <td>235</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Laramie County, Wyoming!!Estimate</th>\n",
+       "      <td>10505</td>\n",
+       "      <td>1780</td>\n",
+       "      <td>8101</td>\n",
+       "      <td>646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Natrona County, Wyoming!!Estimate</th>\n",
+       "      <td>7619</td>\n",
+       "      <td>856</td>\n",
+       "      <td>7749</td>\n",
+       "      <td>1065</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>837 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       fem_total(count)  fem_with_kid(count)  \\\n",
+       "Baldwin County, Alabama!!Estimate                 22981                 4249   \n",
+       "Calhoun County, Alabama!!Estimate                 15956                 3779   \n",
+       "Cullman County, Alabama!!Estimate                  8584                 1402   \n",
+       "DeKalb County, Alabama!!Estimate                   8026                 1343   \n",
+       "Elmore County, Alabama!!Estimate                   9466                 2283   \n",
+       "...                                                 ...                  ...   \n",
+       "Waukesha County, Wisconsin!!Estimate              36238                 4193   \n",
+       "Winnebago County, Wisconsin!!Estimate             19948                 2055   \n",
+       "Wood County, Wisconsin!!Estimate                   7968                 1292   \n",
+       "Laramie County, Wyoming!!Estimate                 10505                 1780   \n",
+       "Natrona County, Wyoming!!Estimate                  7619                  856   \n",
+       "\n",
+       "                                       male_total(count)  male_with_kid(count)  \n",
+       "Baldwin County, Alabama!!Estimate                  13426                   950  \n",
+       "Calhoun County, Alabama!!Estimate                   9599                   318  \n",
+       "Cullman County, Alabama!!Estimate                   5554                   500  \n",
+       "DeKalb County, Alabama!!Estimate                    4541                   362  \n",
+       "Elmore County, Alabama!!Estimate                    4373                   727  \n",
+       "...                                                  ...                   ...  \n",
+       "Waukesha County, Wisconsin!!Estimate               25949                  1716  \n",
+       "Winnebago County, Wisconsin!!Estimate              13825                   586  \n",
+       "Wood County, Wisconsin!!Estimate                    5163                   235  \n",
+       "Laramie County, Wyoming!!Estimate                   8101                   646  \n",
+       "Natrona County, Wyoming!!Estimate                   7749                  1065  \n",
+       "\n",
+       "[837 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "family_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "a00343b2-78bc-43b8-8e70-92c0c6bdd209",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fem_total(count)</th>\n",
+       "      <th>fem_with_kid(count)</th>\n",
+       "      <th>male_total(count)</th>\n",
+       "      <th>male_with_kid(count)</th>\n",
+       "      <th>fem_no_kid(count)</th>\n",
+       "      <th>male_no_kid(count)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Baldwin County, Alabama!!Estimate</th>\n",
+       "      <td>22981</td>\n",
+       "      <td>4249</td>\n",
+       "      <td>13426</td>\n",
+       "      <td>950</td>\n",
+       "      <td>18732</td>\n",
+       "      <td>12476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Calhoun County, Alabama!!Estimate</th>\n",
+       "      <td>15956</td>\n",
+       "      <td>3779</td>\n",
+       "      <td>9599</td>\n",
+       "      <td>318</td>\n",
+       "      <td>12177</td>\n",
+       "      <td>9281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cullman County, Alabama!!Estimate</th>\n",
+       "      <td>8584</td>\n",
+       "      <td>1402</td>\n",
+       "      <td>5554</td>\n",
+       "      <td>500</td>\n",
+       "      <td>7182</td>\n",
+       "      <td>5054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DeKalb County, Alabama!!Estimate</th>\n",
+       "      <td>8026</td>\n",
+       "      <td>1343</td>\n",
+       "      <td>4541</td>\n",
+       "      <td>362</td>\n",
+       "      <td>6683</td>\n",
+       "      <td>4179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Elmore County, Alabama!!Estimate</th>\n",
+       "      <td>9466</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>4373</td>\n",
+       "      <td>727</td>\n",
+       "      <td>7183</td>\n",
+       "      <td>3646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Waukesha County, Wisconsin!!Estimate</th>\n",
+       "      <td>36238</td>\n",
+       "      <td>4193</td>\n",
+       "      <td>25949</td>\n",
+       "      <td>1716</td>\n",
+       "      <td>32045</td>\n",
+       "      <td>24233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Winnebago County, Wisconsin!!Estimate</th>\n",
+       "      <td>19948</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>13825</td>\n",
+       "      <td>586</td>\n",
+       "      <td>17893</td>\n",
+       "      <td>13239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wood County, Wisconsin!!Estimate</th>\n",
+       "      <td>7968</td>\n",
+       "      <td>1292</td>\n",
+       "      <td>5163</td>\n",
+       "      <td>235</td>\n",
+       "      <td>6676</td>\n",
+       "      <td>4928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Laramie County, Wyoming!!Estimate</th>\n",
+       "      <td>10505</td>\n",
+       "      <td>1780</td>\n",
+       "      <td>8101</td>\n",
+       "      <td>646</td>\n",
+       "      <td>8725</td>\n",
+       "      <td>7455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Natrona County, Wyoming!!Estimate</th>\n",
+       "      <td>7619</td>\n",
+       "      <td>856</td>\n",
+       "      <td>7749</td>\n",
+       "      <td>1065</td>\n",
+       "      <td>6763</td>\n",
+       "      <td>6684</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>837 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       fem_total(count)  fem_with_kid(count)  \\\n",
+       "Baldwin County, Alabama!!Estimate                 22981                 4249   \n",
+       "Calhoun County, Alabama!!Estimate                 15956                 3779   \n",
+       "Cullman County, Alabama!!Estimate                  8584                 1402   \n",
+       "DeKalb County, Alabama!!Estimate                   8026                 1343   \n",
+       "Elmore County, Alabama!!Estimate                   9466                 2283   \n",
+       "...                                                 ...                  ...   \n",
+       "Waukesha County, Wisconsin!!Estimate              36238                 4193   \n",
+       "Winnebago County, Wisconsin!!Estimate             19948                 2055   \n",
+       "Wood County, Wisconsin!!Estimate                   7968                 1292   \n",
+       "Laramie County, Wyoming!!Estimate                 10505                 1780   \n",
+       "Natrona County, Wyoming!!Estimate                  7619                  856   \n",
+       "\n",
+       "                                       male_total(count)  \\\n",
+       "Baldwin County, Alabama!!Estimate                  13426   \n",
+       "Calhoun County, Alabama!!Estimate                   9599   \n",
+       "Cullman County, Alabama!!Estimate                   5554   \n",
+       "DeKalb County, Alabama!!Estimate                    4541   \n",
+       "Elmore County, Alabama!!Estimate                    4373   \n",
+       "...                                                  ...   \n",
+       "Waukesha County, Wisconsin!!Estimate               25949   \n",
+       "Winnebago County, Wisconsin!!Estimate              13825   \n",
+       "Wood County, Wisconsin!!Estimate                    5163   \n",
+       "Laramie County, Wyoming!!Estimate                   8101   \n",
+       "Natrona County, Wyoming!!Estimate                   7749   \n",
+       "\n",
+       "                                       male_with_kid(count)  \\\n",
+       "Baldwin County, Alabama!!Estimate                       950   \n",
+       "Calhoun County, Alabama!!Estimate                       318   \n",
+       "Cullman County, Alabama!!Estimate                       500   \n",
+       "DeKalb County, Alabama!!Estimate                        362   \n",
+       "Elmore County, Alabama!!Estimate                        727   \n",
+       "...                                                     ...   \n",
+       "Waukesha County, Wisconsin!!Estimate                   1716   \n",
+       "Winnebago County, Wisconsin!!Estimate                   586   \n",
+       "Wood County, Wisconsin!!Estimate                        235   \n",
+       "Laramie County, Wyoming!!Estimate                       646   \n",
+       "Natrona County, Wyoming!!Estimate                      1065   \n",
+       "\n",
+       "                                       fem_no_kid(count)  male_no_kid(count)  \n",
+       "Baldwin County, Alabama!!Estimate                  18732               12476  \n",
+       "Calhoun County, Alabama!!Estimate                  12177                9281  \n",
+       "Cullman County, Alabama!!Estimate                   7182                5054  \n",
+       "DeKalb County, Alabama!!Estimate                    6683                4179  \n",
+       "Elmore County, Alabama!!Estimate                    7183                3646  \n",
+       "...                                                  ...                 ...  \n",
+       "Waukesha County, Wisconsin!!Estimate               32045               24233  \n",
+       "Winnebago County, Wisconsin!!Estimate              17893               13239  \n",
+       "Wood County, Wisconsin!!Estimate                    6676                4928  \n",
+       "Laramie County, Wyoming!!Estimate                   8725                7455  \n",
+       "Natrona County, Wyoming!!Estimate                   6763                6684  \n",
+       "\n",
+       "[837 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# transform strings into floats\n",
+    "family_count['fem_no_kid(count)'] = family_count['fem_total(count)'] - family_count['fem_with_kid(count)']\n",
+    "family_count['male_no_kid(count)'] = family_count['male_total(count)'] - family_count['male_with_kid(count)']\n",
+    "family_count"
    ]
   },
   {
@@ -668,8 +1040,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "d19fc2da-0d26-4909-b282-53e44917e464",
+   "execution_count": 129,
+   "id": "83d6acb9-a3f9-4008-9ade-d039620be505",
    "metadata": {
     "tags": []
    },
@@ -877,7 +1249,7 @@
        "[848 rows x 6 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,25 +1261,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "266d2b08-ac8a-4f6b-ad3b-73e3fb294c02",
+   "id": "c6210ce9-22d5-440a-ae2f-cb15a930b78e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "family_count['fem_no_kid(count)'] = \n",
-    "family_count['male_no_kid(count)'] = "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "12fce5e9-f635-44ec-b052-6f6dcd411db5",
-   "metadata": {},
-   "source": [
-    "10: 'fem_total(count)'\n",
-    "11: 'fem_with_kid(count)'\n",
-    "6: 'male_total(count)'\n",
-    "7: 'male_with_kid(count)'\n",
-    "fem_no_kid(count)\n",
-    "male_no_kid(count)"
+    "family = pd.concat([family_income, family_count])"
    ]
   }
  ],
