--- a/mvp_notebook.ipynb
+++ b/mvp_notebook.ipynb
@@ -15,8 +15,8 @@
    "metadata": {},
    "source": [
     "## Goal: \n",
-    "* \n",
-    "* \n",
+    "* Create an interactive dashbard to assist families with moving\n",
+    "* Create and implement additional features like violent crime rate, commute time, and internet accessibility\n",
     "<hr style=\"border:2px solid black\">"
    ]
   },
@@ -516,23 +516,15 @@
    "id": "romantic-oriental",
    "metadata": {},
    "source": [
-    "### <u>Modeling:</u>\n",
-    "\n",
-    ">**<u>:</u>**\n",
-    ">* \n",
-    "\n",
     "### <u>Recommendations:</u>\n",
-    ">* \n",
+    ">* Affordability is extremely important, but considering outside factors can help shape the ideal community for you.\n",
+    ">* Families should keep an open mind when looking at ideal places to move to. (Maybe what's best for your family is somewhere you never imagined yourself living)\n",
     "\n",
     "### <u>Next Steps:</u>\n",
-    ">* "
+    ">* Find additional dataframes to continue adding possible features for families to select\n",
+    ">* Take analysis to county level for increased granularity\n",
+    ">* Develop dashboard into website or app for easier access"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6e650e04",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
